Wrap styles in class to prevent 'errors'.

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
     padding: 20px;
 }
 
-section {
+.dilettant section {
     border: 1px solid lightgray;
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
@@ -14,7 +14,7 @@ section {
     margin: 5px 0px;
 }
 
-hr {
+.dilettant hr {
     border: none;
     height: 1px;
     background-color: lightgray;
@@ -22,14 +22,14 @@ hr {
     margin-left: -30px;
 }
 
-section hr {
+.dilettant section hr {
     border: none;
     height: 1px;
     background-color: lightgray;
     margin: 5px -10px;
 }
 
-header {
+.dilettant header {
     border-radius: 50px;
     border: 1px solid lightgray;
     grid-column: 1 / -1;
@@ -37,29 +37,29 @@ header {
     text-align: center;
 }
 
-nav a {
+.dilettant nav a {
     display: inline-block;
     margin: 0 10px;
     color: black;
 }
 
-a {
+.dilettant a {
     display: inline-block;
     color: darkgreen;
 }
 
-a:hover {
+.dilettant a:hover {
     background-color: lightgray;
 }
 
-main {
+.dilettant main {
     grid-column: 1 / -1;
     padding: 20px;
     margin: 0 auto;
     text-align: left;
 }
 
-img {
+.dilettant img {
     border: 1px solid lightgray;
     border-radius: 20px;
     /* padding: 10px; */
@@ -67,7 +67,7 @@ img {
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
 }
 
-.columns {
+.dilettant .columns {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 20px;
@@ -75,12 +75,12 @@ img {
     margin: 0 auto;
 }
 
-.columns column {
+.dilettant .columns column {
     padding: 20px;
     position: relative;
 }
 
-.columns column::before {
+.dilettant .columns column::before {
     content: "";
     position: absolute;
     top: 0;
@@ -90,6 +90,6 @@ img {
     background-color: lightgray;
 }
 
-.columns column:last-child::before {
+.dilettant .columns column:last-child::before {
     display: none;
 }
